--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "connect": "^3.4.1",
     "serve-static": "^1.11.1"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.5.2"
   }
 }
